# kotodama-host

./: .gitignore  Cargo.toml  README.md  deps.edn
.github/workflows/: no-rust.yml
config/kotoba-kotodama-config/: Cargo.toml
config/kotoba-kotodama-config/src/: lib.rs
hosts/kotoba-kotodama-desktop-host/: Cargo.toml
hosts/kotoba-kotodama-desktop-host/src/: lib.rs  main.rs
hosts/kotoba-kotodama-kami-host/: Cargo.toml  README.md
hosts/kotoba-kotodama-kami-host/golden/: uiux-report.json
hosts/kotoba-kotodama-kami-host/src/: lib.rs  main.rs  runtime.rs
resources/kotodama_host/: boundary.edn  config_schema.edn  provider_catalog.edn  sdk_facade.edn  sdk_sources.edn
sdk/kotodama-host-sdk/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/kotodama-host-sdk/_archive/: graph-builder.2026-04-12.ts
sdk/kotodama-host-sdk/src/: actor-registry.ts  agent-lifecycle.ts  app-auth-context.ts  app-metadata.ts  app-options.ts  app-router.ts  app.ts  audit-query-builder.ts  b2.ts  cohort.ts  consent-helpers.ts  conversation.ts  credits-meter.ts  did.ts  heartbeat-cadence.ts  helpers.ts  host-contract.cljc  host-dispatcher.ts  host-imports.ts  host-web-router.ts  hyperdrive-dialect.ts  index.ts  kami-avatar-pipeline.ts  kami-character-hybrid.ts  kami-character-maker.ts  kami-character-sdf.ts  kami-character-splat.ts  kami-character-vrm.ts  kami-scene-validator.ts  kami-vtuber-hybrid.ts  kami-vtuber-splat.ts  kysely.ts  (+29 more)
src/kotodama/: host_contract.cljc
test/kotodama/: host_contract_test.clj  host_contract_test.cljc
wit/: kotodama-host.wit
(+38 files in other folders)
