[workspace]
resolver = "2"
members = [
    "config/kotoba-kotodama-config",
    "hosts/kotoba-kotodama-desktop-host",
    "hosts/kotoba-kotodama-kami-host",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# error handling
anyhow = "1"

# encoding
hex = "0.4"
base64 = "0.22"

# WIT bindings (WASI P2 Component Model)
wit-bindgen = "0.36"
wit-bindgen-rt = "0.36"

# internal
kotoba-kotodama-config = { path = "config/kotoba-kotodama-config" }
