[package]
name = "kotoba-kotodama-kami-host"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "KAMI-powered native desktop host scaffold for Kotodama WASM apps"

[lib]
name = "kotodama_kami_host"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
kami-ui-gpu = { path = "../../../kami-engine/kami-ui-gpu" }
kami-devtools = { path = "../../../kami-engine/kami-devtools" }
kami-input = { path = "../../../kami-engine/kami-input" }
kami-text = { path = "../../../kami-engine/kami-text" }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.33"
pollster = "0.4"
png = "0.18"
wgpu = "24"
winit = "0.29"
